Combined both mine and timmys work

--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "prosemirror-view": "^1.26.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
