--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
     "prosemirror-transform": "^1.6.0",
     "prosemirror-view": "^1.26.5",
     "react": "^18.2.0",
+    "react-complex-tree": "^1.1.9",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-scripts": "5.0.1"
