--- a/ui/package.json
+++ b/ui/package.json
@@ -48,12 +48,11 @@
     "prosemirror-transform": "^1.6.0",
     "prosemirror-view": "^1.26.5",
     "react": "^18.2.0",
-    "react-complex-tree": "^1.1.9",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
     "react-app-polyfill": "^3.0.0",
+    "react-complex-tree": "^1.1.9",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-refresh": "^0.11.0",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
@@ -66,7 +65,8 @@
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2",
-    "workbox-webpack-plugin": "^6.4.1"
+    "workbox-webpack-plugin": "^6.4.1",
+    "yjs": "^13.5.41"
   },
   "scripts": {
     "start": "node scripts/start.js",
