--- a/ui/package.json
+++ b/ui/package.json
@@ -73,6 +73,7 @@
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2",
     "workbox-webpack-plugin": "^6.4.1",
+    "y-prosemirror": "^1.1.2",
     "yjs": "^13.5.41"
   },
   "scripts": {
