--- a/ui/package.json
+++ b/ui/package.json
@@ -61,6 +61,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-refresh": "^0.11.0",
+    "remixicon": "^2.5.0",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
