lots of code style fixes:

--- a/ui/package.json
+++ b/ui/package.json
@@ -51,6 +51,7 @@
     "prosemirror-keymap": "^1.2.0",
     "prosemirror-model": "^1.18.1",
     "prosemirror-schema-basic": "^1.2.0",
+    "prosemirror-schema-list": "^1.2.2",
     "prosemirror-state": "^1.4.1",
     "prosemirror-transform": "^1.6.0",
     "prosemirror-view": "^1.26.5",
