--- a/ui/package.json
+++ b/ui/package.json
@@ -46,6 +46,7 @@
     "prompts": "^2.4.2",
     "prosemirror-collab": "^1.3.0",
     "prosemirror-commands": "^1.3.0",
+    "prosemirror-dropcursor": "^1.6.0",
     "prosemirror-history": "^1.3.0",
     "prosemirror-inputrules": "^1.2.0",
     "prosemirror-keymap": "^1.2.0",
