--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /ui/node_modules
+/react-ui/node_modules
 /.pnp
 .pnp.js
 
@@ -10,6 +11,7 @@
 
 # production
 /ui/build
+/react-ui/build
 
 # misc
 .DS_Store
