--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,8 @@
     "tailwindcss": "^3.1.8",
     "typescript": "~4.7.4",
     "vite": "^3.0.9",
-    "vue-tsc": "^0.40.7"
+    "vue-tsc": "^0.40.7",
+    "autoprefixer": "^9",
+    "postcss": "^7"
   }
 }
