--- a/ui/package.json
+++ b/ui/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "prosemirror-commands": "^1.3.1",
+    "prosemirror-inputrules": "^1.2.0",
     "prosemirror-keymap": "^1.2.0",
     "prosemirror-model": "^1.18.1",
+    "prosemirror-schema-list": "^1.2.2",
     "prosemirror-state": "^1.4.2",
     "prosemirror-view": "^1.29.0",
     "vue": "^3.2.38",
