--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@urbit/http-api": "^2.3.0",
     "prosemirror-commands": "^1.3.1",
     "prosemirror-inputrules": "^1.2.0",
     "prosemirror-keymap": "^1.2.0",
@@ -19,7 +20,8 @@
     "prosemirror-view": "^1.29.0",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "yjs": "^13.5.42"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
