save and load logic built

--- a/ui/package.json
+++ b/ui/package.json
@@ -21,6 +21,7 @@
     "vue": "^3.2.38",
     "vue-router": "^4.1.5",
     "vuex": "^4.1.0",
+    "y-prosemirror": "^1.2.0",
     "yjs": "^13.5.42"
   },
   "devDependencies": {
