--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@urbit/http-api": "^2.3.0",
     "prosemirror-commands": "^1.3.1",
+    "prosemirror-dropcursor": "^1.6.1",
     "prosemirror-inputrules": "^1.2.0",
     "prosemirror-keymap": "^1.2.0",
     "prosemirror-model": "^1.18.1",
