--- a/ui/package.json
+++ b/ui/package.json
@@ -10,7 +10,10 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.276.0",
     "@urbit/http-api": "^2.3.0",
+    "aws-s3": "^2.0.5",
+    "aws-sdk": "^2.1321.0",
     "prosemirror-commands": "^1.3.1",
     "prosemirror-dropcursor": "^1.6.1",
     "prosemirror-inputrules": "^1.2.0",
